[gd_scene load_steps=4 format=3 uid="uid://b83f7dlo1eds2"]

[ext_resource type="Script" path="res://Scripts/UI/Settings/SignalAggregator.gd" id="1_v4do7"]
[ext_resource type="Script" path="res://Scripts/UI/Settings/UpdateWaitTime.gd" id="1_vdtfk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7firx"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 10
mouse_filter = 2
script = ExtResource("1_v4do7")

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(410, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -410.0
offset_top = -111.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 0

[node name="Controles" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TabContainer/Controles"]
layout_mode = 2
alignment = 2

[node name="Mobile" type="VBoxContainer" parent="TabContainer/Controles/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Options" type="HBoxContainer" parent="TabContainer/Controles/VBox/Mobile"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controles/VBox/Mobile/Options"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Controles táctiles"
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Controles/VBox/Mobile/Options"]
layout_mode = 2
button_pressed = true

[node name="Laberinto" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TabContainer/Laberinto"]
layout_mode = 2
alignment = 2

[node name="Size" type="VBoxContainer" parent="TabContainer/Laberinto/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Laberinto/VBox/Size"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tamaño"
vertical_alignment = 1

[node name="Options" type="HBoxContainer" parent="TabContainer/Laberinto/VBox/Size"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="X" type="SpinBox" parent="TabContainer/Laberinto/VBox/Size/Options"]
layout_mode = 2
min_value = 2.0
max_value = 512.0
value = 20.0
prefix = "X: "
custom_arrow_step = 1.0

[node name="Y" type="SpinBox" parent="TabContainer/Laberinto/VBox/Size/Options"]
layout_mode = 2
min_value = 2.0
max_value = 512.0
value = 20.0
prefix = "Y: "
custom_arrow_step = 1.0

[node name="WaitTime" type="VBoxContainer" parent="TabContainer/Laberinto/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
script = ExtResource("1_vdtfk")

[node name="Label" type="Label" parent="TabContainer/Laberinto/VBox/WaitTime"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tiempo de espera"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Laberinto/VBox/WaitTime"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Slider" type="HSlider" parent="TabContainer/Laberinto/VBox/WaitTime/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 10.0
step = 0.125
allow_greater = true

[node name="HSeparator" type="HSeparator" parent="TabContainer/Laberinto/VBox/WaitTime/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_7firx")

[node name="Time" type="Label" parent="TabContainer/Laberinto/VBox/WaitTime/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "0 segundos"

[node name="Buttons" type="HBoxContainer" parent="TabContainer/Laberinto/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="Generate" type="Button" parent="TabContainer/Laberinto/VBox/Buttons"]
layout_mode = 2
text = "Generar
"

[connection signal="toggled" from="TabContainer/Controles/VBox/Mobile/Options/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="TabContainer/Laberinto/VBox/WaitTime/HBoxContainer/Slider" to="TabContainer/Laberinto/VBox/WaitTime" method="_on_slider_value_changed"]
[connection signal="pressed" from="TabContainer/Laberinto/VBox/Buttons/Generate" to="." method="_on_generate_pressed"]
